test/classes/delete-free/tests-from-design-overview/generic-collection-owned-borrow-error.good
generic-collection-owned-borrow-error.chpl:11: In function 'test':
generic-collection-owned-borrow-error.chpl:14: error: unresolved type specifier 'Collection(type borrowed MyClass)'
generic-collection-owned-borrow-error.chpl:3: note: this candidate did not match: Collection(type element)
generic-collection-owned-borrow-error.chpl:14: note: because call actual argument #1 with type borrowed MyClass
generic-collection-owned-borrow-error.chpl:4: note: is passed to formal 'element: owned'
